--- a/config/server.yaml
+++ b/config/server.yaml
@@ -3,5 +3,5 @@ jwt:
   key: "1qaz2ws"
   duration: 1000
 metrics_port: 8002
-resource_path: "/home/chamith/go/src/github.com/udayangaac/ims/resources"
+resource_path: ""
 file_server_port: 8003
