--- a/config/database.yaml
+++ b/config/database.yaml
@@ -1,8 +1,8 @@
 host: 127.0.0.1
 port: 3306
-database: main
-user_name: username
-password: password
+database: turbit
+user_name: jayan
+password: 123456
 max_open_conn: 100
 max_idle_conn: 50
 conn_max_life_time: 10000
