--- a/config/database.yaml
+++ b/config/database.yaml
@@ -1,13 +1,12 @@
 # Jayan
-
-host: 127.0.0.1
-port: 3306
-database: turbit
-user_name: jayan
-password: 123456
-max_open_conn: 100
-max_idle_conn: 50
-conn_max_life_time: 10000
+#host: 127.0.0.1
+#port: 3306
+#database: turbit
+#user_name: jayan
+#password: 123456
+#max_open_conn: 100
+#max_idle_conn: 50
+#conn_max_life_time: 10000
 
 # Chamith
 #host: 127.0.0.1
@@ -18,3 +17,13 @@ conn_max_life_time: 10000
 #max_open_conn: 100
 #max_idle_conn: 50
 #conn_max_life_time: 10000
+
+# Prod
+host: 127.0.0.1
+port: 3306
+database: turbit
+user_name: mobileApi
+password: Jayan@turbit'
+max_open_conn: 100
+max_idle_conn: 50
+conn_max_life_time: 10000
